# Autofocus-Anything

./: .directory  .gitignore  ASICamera2.h  Axis.cpp  C  CMakeLists copy.txt  CMakeLists.txt  Distance.cpp  HVI.cc  Makefile  README  README.md  Stage.h  Will_motorvids.cpp  Xeryon.h  autofocus.cc  autofocus.cpp  autofocus.h  autofocus.hpp  autofocus_v4.sln  autofocus_v4.vcxproj  autofocus_v4.vcxproj.filters  cam_obj.cpp  cms_eye.cpp  compass.hpp  compile_commands.json  cond.hpp  ctrl_obj.cpp  framefilter.hpp  i  lens.cc  lens.cpp  lens.h  lens.hpp  logfile.hpp  main XERYON.cpp  main.cpp  main.hpp  mainwindow.cpp  mainwindow.hpp  (+28 more)
.cache/clangd/index/: AncillaryData.h.D005F7FE88BF7C97.idx  BasicLockable.h.CDB9831B40EA5A0A.idx  Camera.h.F62BC2F055BCD364.idx  Camera.hpp.935B19A9F761A6F4.idx  EnumEntry.h.8DD2A75392CF410C.idx  EnumEntry.hpp.DE60AC93DFA6E3A0.idx  Feature.h.FF59D92F16E0339C.idx  Feature.hpp.238773E11AC2C267.idx  FeatureContainer.h.EFA1019A9DD7B7FB.idx  FeatureContainer.hpp.B6C29F98573DA594.idx  FileLogger.h.6AE29E2DF2BF4A1A.idx  Frame.h.226681FF27DA63E2.idx  ICameraFactory.h.33D69F29DECC0A28.idx  ICameraListObserver.h.28A91DFFB924408C.idx  IFeatureObserver.h.41595ADC159F70C5.idx  IFrameObserver.h.72671EA88B8F03DF.idx  IInterfaceListObserver.h.F7A2BA5B4B1BFB61.idx  IRegisterDevice.h.482A6A7B138B333E.idx  Interface.h.252283F7C4AB612F.idx  Interface.hpp.B4B146E3A2497E3A.idx  LoggerDefines.h.B4A37EB6A7E40B12.idx  Mutex.h.1AFFCE56B1A1BE55.idx  SharedPointer.h.37AE0DE3AC37E955.idx  SharedPointerDefines.h.673C0A62713A6912.idx  SharedPointer_impl.h.C382A148D16CEB2B.idx  UserLoggerDefines.h.66C328D3A8CF6B27.idx  VimbaC.h.85458BD4831460C7.idx  VimbaCPP.h.41F9CF17951328EF.idx  VimbaCPPCommon.h.CDB4855C08AF6993.idx  VimbaSystem.h.8EEA20D6DD1EC2E4.idx  VimbaSystem.hpp.FAAD50855F526706.idx  VmbCommonTypes.h.E3E4ED4D9374A80C.idx  compass.h.9DB6343545298E13.idx  cond.cpp.13EF1B55D16FB7CB.idx  cond.hpp.14B3054E84331A47.idx  framefilter.hpp.5BEF08AA83196F5F.idx  logfile.hpp.6E36C0DCFC03A06E.idx  main.cpp.33CD7F81947F43E7.idx  main.hpp.EC98CEAF94EE9670.idx  mainwindow.cpp.4714EC3EDA0C2DF6.idx  (+19 more)
config/: config.txt  settings_default OG.txt  settings_default.txt
include/: Axis.h  Distance.h  Xeryon.h  autofocus.hpp  compass.hpp  imagingcam.hpp  lens.hpp  mainwindow.hpp  notificationCenter.hpp  phasecorr2_stabiliser.hpp  phasecorr_stabiliser.hpp  pid.hpp  recorder.hpp  sdlwincommon.hpp  sdlwindow.hpp  sharpness_analyzer.hpp  sharpness_graph.hpp  system.hpp  tiltedcam.hpp  vesseledgel.hpp
lib/VimbaC/Include/: VmbCommonTypes.h
path=include/: sdlwincommon.hpp
src/: Stage.cpp  Xeryon.cpp  autofocus.cpp  cond.cpp  imagingcam.cpp  lens.cpp  main.cpp  main_XERYON.cpp  mainwindow.cpp  phasecorr2_stabiliser.cpp  phasecorr_stabiliser.cpp  pid.cpp  recorder.cpp  sdlwinchild.cpp  sdlwindow.cpp  sharpness_analyzer.cpp  sharpness_graph.cpp  system.cpp  thread.cpp  tiltedcam.cpp  vesseledgel.cpp
test/: autofocus_test.cpp  lens_test.cpp  mock_lens_globals.cpp  mock_logfile.cpp  mock_notification.hpp  new_device_calibration.cpp  pid_tuning_standalone.cpp  tiltedcam_test.cpp
